[package]
name = "backup_db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
azure_core = { version = "0.20", features = ["enable_reqwest_rustls"] }
azure_identity = { version = "0.20", default-features = false }
azure_security_keyvault = "0.20.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0.1"
dotenv = "0.15.0"
futures = "0.3"
hickory-resolver = "0.24"
reqwest = { version = "0.12", features = [
    "stream",
], default-features = false, optional = true }
range_check = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
